--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
                 src="https://images.unsplash.com/photo-1589561253898-768105ca91a8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80"
                 alt=""
             /></a>
-
+            <br /><br />
             <p>
-              Lorem ipsum dolor sit amet,consectetur adipiscing elit. Cras
-              lectus felis, auctor quis imperdiet vel, tempor non neque. Proin
-              sed sapien quis magna lobortis
+              Encourage people to share rides to reduce the number of cars on
+              the road and lower emissions.Offer tax credits, rebates, and other
+              incentives to make it more affordable for people to purchase and
+              use electric cars, which emit less CO2 than traditional cars.
             </p>
             <a class="link" href="osmosis-beats.html">Read more</a>
           </li>
