--- a/goals.html
+++ b/goals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ecothunder</title>
+    <title>Ecothunder | About Us</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!--[if IE 9
@@ -25,10 +25,10 @@
         <div id="navigation">
           <div>
             <ul>
-              <li class="current"><a href="index.html">Home</a></li>
-              <li><a href="goals.html">Goals</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li class="current"><a href="goals.html">Goals</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="why-choose-us.html">Statistics</a></li>
+              <li><a href="why-choose-us.html">Why Choose Us?</a></li>
               <li><a href="blog.html">Blog</a></li>
             </ul>
           </div>
@@ -36,9 +36,22 @@
       </div>
     </div>
     <div id="content">
-      <div id="section">
-        <div>
-          <h1>Sustainable Development Goals</h1>
+      <div>
+        <h2>
+          <b class="first"><strong>Sustainable Development Goals </strong></b>
+        </h2>
+        <div id="imag">
+          <a href="#"
+            ><img
+              height="auto"
+              width="520px"
+              style="margin-bottom: 50px"
+              src="https://www.un.org/sites/un2.un.org/files/styles/large-article-image-style-16-9/public/field/image/2022/10/sdgs.png"
+              alt=""
+          /></a>
+        </div>
+
+        <article>
           <p>
             The United Nations General Assembly adopted the sustainable
             development goals agenda in 2015, to be achieved by the year 2030.
@@ -49,77 +62,32 @@
             include four major themes -- environmental, social, economic and
             partnerships.
           </p>
-          <span>
-            <a href="goals.html">Read More</a>
-          </span>
-        </div>
-        <div id="figure">
-          <a href="#"
-            ><img src="images/little-girl-blowing-wind-mill.jpg" alt=""
-          /></a>
-        </div>
-      </div>
-      <div id="featured">
-        <ul>
-          <li class="first">
-            <h3>CO2 Emission and UAE</h3>
-            <a href="power-earth.html"
-              ><img
-                style="width: 320px; height: 220px"
-                src="images/cars.jpg"
-                alt=""
-            /></a>
-            <br /><br /><br />
-            <p>
-              Nevertheless, the UAE has compiled this initial set of attractive
-              strategies in an effort to demonstrate its solidarity with the
-              international community in tackling the threat of climate change,
-              as well as to inform future policy discussions.
-            </p>
-            <a class="link" href="Co2.html">Read more</a>
-          </li>
-          <li>
-            <h2>Health Issues</h2>
-            <a href="earth-mad.html"
-              ><img
-                width="320px"
-                height="auto"
-                src="https://plus.unsplash.com/premium_photo-1664301666878-e032962e363c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-                alt=""
-            /></a>
-            <br /><br /><br />
-            <p>
-              Children’s immune systems and organs are still developing, and
-              they eat and drink more for their size.They also breathe at a
-              faster rate, increasing their exposure to dangerous air pollutants
-              that can damage their lungs
-            </p>
-            <a class="link" href="earth-mad.html">Read more</a>
-          </li>
-          <li>
-            <h2>Ideas and Suggestions</h2>
-            <a href="osmosis-beats.html"
-              ><img
-                height="auto"
-                width="320px"
-                src="https://images.unsplash.com/photo-1589561253898-768105ca91a8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80"
-                alt=""
-            /></a>
-            <br /><br />
-            <p>
-              Encourage people to share rides to reduce the number of cars on
-              the road and lower emissions.Offer tax credits, rebates, and other
-              incentives to make it more affordable for people to purchase and
-              use electric cars, which emit less CO2 than traditional cars.
-            </p>
-            <a class="link" href="osmosis-beats.html">Read more</a>
-          </li>
-        </ul>
-        <br />
-        <br />
+
+          <p>
+            The UAE has made these goals a fundamental part of its vision and
+            future ambitions, making them an essential element of its 2030
+            agenda. The country has committed itself to “not leaving anyone
+            behind.” The sustainable development goals have been incorporated in
+            the development strategies of the UAE. The National Committee on
+            SDGs was established in 2017, with the Ministry of Cabinet Affairs
+            and the Future, the Ministry of Foreign Affairs and International
+            Cooperation, and 15 government entities at the federal level as its
+            members. They share responsibility for implementing the sustainable
+            development goals at the national level, monitoring progress on the
+            goals, engaging relevant stakeholders, and submitting periodic
+            reports on the country’s achievements, in addition to building a
+            comprehensive action plan and ensuring that these goals are aligned
+            with the UAE’s national development priorities and the UAE Vision
+            2021.
+          </p>
+          <p>
+            This website will talk on the issue which is one of the Goal for
+            improvement in Climate Changes. When we talk about Climate Change,
+            the element causes a significant impact is “CO₂ emissions”.
+          </p>
+        </article>
       </div>
     </div>
-
     <div id="footer">
       <div>
         <div class="first">
@@ -165,7 +133,6 @@
             </label>
             <input class="submit" type="submit" value="" />
           </form>
-
           <p>
             Copyright &copy; 2011 Ecothunder Incorporated <br />
             Website Template By
