child issues added blog

--- a/Co2.html
+++ b/Co2.html
@@ -38,12 +38,7 @@
     <div id="content">
       <div>
         <h2>
-          <b class="first"
-            ><strong
-              >UAE needs 'toxicity tax' on high polluting vehicles, industry
-              head says
-            </strong></b
-          >
+          <b class="first"><strong>CO2 Emission and UAE </strong></b>
         </h2>
         <div>
           <a href="#"
