--- a/goals.html
+++ b/goals.html
@@ -38,7 +38,7 @@
     <div id="content">
       <div>
         <h2>
-          <b class="first"><strong>Sustainable Development Goals </strong></b>
+          <b class="first"><strong>Climate Changes in UAE </strong></b>
         </h2>
         <div id="imag">
           <a href="#"
