--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="content">
       <div id="section">
         <div>
-          <h1>Sustainable Development Goals</h1>
+          <h1>Climate Changes in UAE</h1>
           <p>
             The United Nations General Assembly adopted the sustainable
             development goals agenda in 2015, to be achieved by the year 2030.
@@ -63,7 +63,7 @@
         <ul>
           <li class="first">
             <h3>CO2 Emission and UAE</h3>
-            <a href="power-earth.html"
+            <a href="Co2.html"
               ><img
                 style="width: 320px; height: 220px"
                 src="images/cars.jpg"
@@ -80,7 +80,7 @@
           </li>
           <li>
             <h2>Health Issues</h2>
-            <a href="earth-mad.html"
+            <a href="health.html"
               ><img
                 width="320px"
                 height="auto"
@@ -94,7 +94,7 @@
               faster rate, increasing their exposure to dangerous air pollutants
               that can damage their lungs
             </p>
-            <a class="link" href="earth-mad.html">Read more</a>
+            <a class="link" href="health.html">Read more</a>
           </li>
           <li>
             <h2>Ideas and Suggestions</h2>
