--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <li class="current"><a href="index.html">Home</a></li>
               <li><a href="goals.html">Goals</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="why-choose-us.html">Statistics</a></li>
+              <li><a href="stats.html">Statistics</a></li>
               <li><a href="blog.html">Blog</a></li>
             </ul>
           </div>
