--- a/goals.html
+++ b/goals.html
@@ -88,40 +88,19 @@
         </article>
       </div>
     </div>
+
     <div id="footer">
       <div>
         <div class="first">
-          <h3><a href="#">Ecothunder</a></h3>
+          <h3><a href="#">Eco Friendly Dubai</a></h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-            placerat eleifend arcu, sit amet rutrum lectus lobortis quis. Donec
-            aliquam
+            This website will talk on the issue which is one of the Goal for
+            improvement in Climate Changes. When we talk about Climate Change,
+            the element causes a significant impact is “CO₂ emissions”.
           </p>
-          <div>
-            <p>Telephone. : <span>12345678-90</span></p>
-            <p>Fax : <span>23456789-01</span></p>
-            <p>Email : <span>ask@ecothunder.com</span></p>
-          </div>
-        </div>
-        <div>
-          <h3>Get Social with us!</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-            placerat eleifend arcu, sit amet rutrum lectus lobortis quis. Donec
-            aliquam
-          </p>
-          <div>
-            <a href="#" class="facebook"></a> <a href="#" class="twitter"></a>
-            <a href="#" class="linked-in"></a>
-          </div>
         </div>
         <div>
           <h3>Share your thoughts!</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-            placerat eleifend arcu, sit amet rutrum lectus lobortis quis. Donec
-            aliquam
-          </p>
           <form action="#">
             <label for="subscribe">
               <input
@@ -133,13 +112,8 @@
             </label>
             <input class="submit" type="submit" value="" />
           </form>
-          <p>
-            Copyright &copy; 2011 Ecothunder Incorporated <br />
-            Website Template By
-            <a target="_blank" href="http://www.freewebsitetemplates.com/"
-              >freewebsitetemplates.com</a
-            >
-          </p>
+
+          <p>Copyright &copy; Eco Friendly Dubai <br /></p>
         </div>
       </div>
     </div>
