--- a/health.html
+++ b/health.html
@@ -28,7 +28,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="goals.html">Goals</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="why-choose-us.html">Why Choose Us?</a></li>
+              <li><a href="why-choose-us.html">Statistics</a></li>
               <li class="current"><a href="blog.html">Blog</a></li>
             </ul>
           </div>
@@ -147,40 +147,19 @@
         </ul>
       </div>
     </div>
+
     <div id="footer">
       <div>
         <div class="first">
-          <h3><a href="#">Ecothunder</a></h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-            placerat eleifend arcu, sit amet rutrum lectus lobortis quis. Donec
-            aliquam
-          </p>
-          <div>
-            <p>Telephone. : <span>12345678-90</span></p>
-            <p>Fax : <span>23456789-01</span></p>
-            <p>Email : <span>ask@ecothunder.com</span></p>
-          </div>
-        </div>
-        <div>
-          <h3>Get Social with us!</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-            placerat eleifend arcu, sit amet rutrum lectus lobortis quis. Donec
-            aliquam
-          </p>
-          <div>
-            <a href="#" class="facebook"></a> <a href="#" class="twitter"></a>
-            <a href="#" class="linked-in"></a>
-          </div>
-        </div>
-        <div>
-          <h3>Share your thoughts!</h3>
+          <h3><a href="#">Eco Friendly Dubai</a></h3>
           <p>
             This website will talk on the issue which is one of the Goal for
             improvement in Climate Changes. When we talk about Climate Change,
             the element causes a significant impact is “CO₂ emissions”.
           </p>
+        </div>
+        <div>
+          <h3>Share your thoughts!</h3>
           <form action="#">
             <label for="subscribe">
               <input
@@ -192,13 +171,8 @@
             </label>
             <input class="submit" type="submit" value="" />
           </form>
-          <p>
-            Copyright &copy; 2011 Ecothunder Incorporated <br />
-            Website Template By
-            <a target="_blank" href="http://www.freewebsitetemplates.com/"
-              >freewebsitetemplates.com</a
-            >
-          </p>
+
+          <p>Copyright &copy; Eco Friendly Dubai <br /></p>
         </div>
       </div>
     </div>
