--- a/goals.html
+++ b/goals.html
@@ -25,13 +25,13 @@
         <div id="navigation">
           <div>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li ><a href="index.html">Home</a></li>
               <li class="current"><a href="goals.html">Goals</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="why-choose-us.html">Why Choose Us?</a></li>
-              <li><a href="blog.html">Blog</a></li>
+              <li><a href="stats.html">Statistics</a></li>
+              <li ><a href="#">Blog</a></li>
             </ul>
           </div>
+        </div>
         </div>
       </div>
     </div>
