--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
             <ul>
               <li class="current"><a href="index.html">Home</a></li>
               <li><a href="goals.html">Goals</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
               <li><a href="stats.html">Statistics</a></li>
-              <li><a href="blog.html">Blog</a></li>
+              <li><a href="#">Blog</a></li>
             </ul>
           </div>
         </div>
@@ -98,7 +97,7 @@
           </li>
           <li>
             <h2>Ideas and Suggestions</h2>
-            <a href="osmosis-beats.html"
+            <a href="idea.html"
               ><img
                 height="auto"
                 width="320px"
@@ -112,7 +111,7 @@
               incentives to make it more affordable for people to purchase and
               use electric cars, which emit less CO2 than traditional cars.
             </p>
-            <a class="link" href="osmosis-beats.html">Read more</a>
+            <a class="link" href="idea.html">Read more</a>
           </li>
         </ul>
         <br />
