--- a/health.html
+++ b/health.html
@@ -27,9 +27,8 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="goals.html">Goals</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="why-choose-us.html">Statistics</a></li>
-              <li class="current"><a href="blog.html">Blog</a></li>
+              <li><a href="stats.html">Statistics</a></li>
+              <li class="current"><a href="#">Blog</a></li>
             </ul>
           </div>
         </div>
