--- a/stats.html
+++ b/stats.html
@@ -23,16 +23,15 @@
           /></a>
         </div>
         <div id="navigation">
-          <div>
-            <ul>
-              <li class="current"><a href="index.html">Home</a></li>
-              <li><a href="goals.html">Goals</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="why-choose-us.html">Statistics</a></li>
-              <li><a href="blog.html">Blog</a></li>
-            </ul>
+            <div>
+              <ul>
+                <li ><a href="index.html">Home</a></li>
+                <li><a href="goals.html">Goals</a></li>
+                <li  class="current"><a href="stats.html">Statistics</a></li>
+                <li><a href="#">Blog</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
       </div>
     </div>
     <div id="content">
