added refrence page

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
             </p>
             <a class="link" href="idea.html">Read more</a>
           </li>
+          <li>
+            <a class="link" href="refrence.html">Refrences</a>
+          </li>
         </ul>
         <br />
         <br />
